RESOLVED FIXED215990
REGRESSION (r266333): Mousewheel scrolling no longer works on WinCairo
https://bugs.webkit.org/show_bug.cgi?id=215990
Summary REGRESSION (r266333): Mousewheel scrolling no longer works on WinCairo
Simon Fraser (smfr)
Reported 2020-08-30 15:38:31 PDT
REGRESSION (r266333): Mousewheel scrolling no longer works on WinCairo
Attachments
Patch (2.07 KB, patch)
2020-08-30 15:40 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-08-30 15:40:23 PDT
EWS
Comment 2 2020-08-30 16:16:34 PDT
Committed r266338: <https://trac.webkit.org/changeset/266338> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407574 [details].
Radar WebKit Bug Importer
Comment 3 2020-08-30 16:17:17 PDT
Note You need to log in before you can comment on or make changes to this bug.