REGRESSION (r266333): Mousewheel scrolling no longer works on WinCairo https://bugs.webkit.org/show_bug.cgi?id=215990

Reviewed by Tim Horton.

Make sure we call processWheelEventForScrolling() when ENABLE(WHEEL_EVENT_LATCHING) is not
defined.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleWheelEvent):


Canonical link: https://commits.webkit.org/228774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266338 268f45cc-cd09-0410-ab3c-d52691b4dbfc